--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,14 @@
             <h2 class="h5 text-center mt-3 mb-3">Portraits</h2>
         </div>
         <div class="col-12 mt-3 text-center">
-            <a href="#" class="btn btn-primary">Show More</a>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <a href="#" class="btn btn-outline-dark btn-block">
+                        <i class="fas fa-chevron-right"></i> Explore Art Collection
+                    </a>
+                </div>
+            </div>
+            
         </div>
     </div>
 </section>
