--- a/templates/base.html
+++ b/templates/base.html
@@ -1,32 +1,36 @@
-    <!DOCTYPE html>
-    {% load static %}
-    <html lang="en">
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
 
-    <head>
-        <title>Art Gallary</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <title>Art Gallary</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
+    <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"/>
-        <link rel="stylesheet" href="{% static 'app/css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
-        <style>
-            {% block style %}
-            
-            {% endblock %}
-        </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{% static 'app/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
+    <style>
+        {
+            % block style %
+        }
 
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
+            {
+            % endblock %
+        }
+    </style>
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
 
 
-    </head>
+</head>
 
-    <body>
+<body>
     <!-- Start Top Nav -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-light d-none d-lg-block" id="nav_top">
         <div class="container text-light">
@@ -53,9 +57,8 @@
                 Art Gallary
             </a>
 
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#main_nav" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -64,13 +67,13 @@
                 <div class="flex-fill">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link"href="{% url 'home' %}">Home</a>
+                            <a class="nav-link" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'about' %}">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Shop</a>
+                            <a class="nav-link"  href="{% url 'art' %}">Shop</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="">Contact</a>
@@ -87,33 +90,37 @@
                         </div>
                     </div>
                     <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal"
-                    data-bs-target="#templatemo_search">
+                        data-bs-target="#templatemo_search">
                         <i class="fa fa-fw fa-search text-dark mr-2"></i>
                     </a>
                     <a class="nav-icon position-relative text-decoration-none" href="#">
                         <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
                         <span
-                                class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
+                            class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
                     </a>
+                    <a class="nav-icon position-relative text-decoration-none" href="{% url 'profile' %}">
+                        <div id="user-btn" class="fas fa-user"></div>
+                    </a>
+                    
 
-                    {% if  user.is_authenticated %}
+                    {% if user.is_authenticated %}
 
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'logout' %}">
                         <button type="button" class="btn btn-dark">
                             <i class="fa fa-fw fa-sign-out-alt"></i> Logout
                         </button>
                     </a>
-                    
+
 
                     {% else %}
-    
+
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'login'  %}">
-                        <button  type="button" class="btn btn-outline-dark me-3">
+                        <button type="button" class="btn btn-outline-dark me-3">
                             <i class="fa fa-fw fa-sign-in-alt"></i> Login
                         </button>
                     </a>
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'register' %}">
-                        <button  type="button" class="btn btn-dark">
+                        <button type="button" class="btn btn-dark">
                             <i class="fa fa-fw fa-user-plus"></i> Register
                         </button>
                     </a>
@@ -210,7 +217,7 @@
                         </li>
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
-                            href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg fa-fw"></i></a>
+                                href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg fa-fw"></i></a>
                         </li>
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank" href="https://twitter.com/"><i
@@ -218,7 +225,7 @@
                         </li>
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
-                            href="https://www.linkedin.com/"><i class="fab fa-linkedin fa-lg fa-fw"></i></a>
+                                href="https://www.linkedin.com/"><i class="fab fa-linkedin fa-lg fa-fw"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -233,7 +240,7 @@
                         <p class="text-left text-light">
                             Copyright &copy; 2021 ZROCK ELITE
                             | Designed by <a href="https://www.linkedin.com/in/rakholiya-avadh-726391220/"
-                                            target="_blank">Avadh Rakholiya</a>
+                                target="_blank">Avadh Rakholiya</a>
                         </p>
                     </div>
                 </div>
@@ -249,9 +256,9 @@
     <script src="{% static 'app/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'app/js/templatemo.js' %}"></script>
     <script src="{% static 'app/js/custom.js' %}"></script>
-
+   
 
     <!-- End Script -->
-    </body>
+</body>
 
-    </html>
+</html>
