--- a/templates/art_detail.html
+++ b/templates/art_detail.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-lg-5 mt-5">
                 <div class="card mb-3">
-                    <img class="card-img img-fluid" src="{% static 'app/images/Designer (15).jpeg' %}" alt="Card image cap" id="product-detail">
+                    <img class="card-img img-fluid" src="{{art_detail.image.url}}" alt="Card image cap" id="product-detail">
                 </div>
                 
             </div>
@@ -17,26 +17,26 @@
             <div class="col-lg-7 mt-5">
                 <div class="card">
                     <div class="card-body">
-                        <h1 class="h2">Active Wear</h1>
-                        <p class="h3 py-2">&#8377;25.00</p>
+                        <h1 class="h2">{{art_detail.title}}</h1>
+                        <p class="h3 py-2">&#8377;{{art_detail.price}}</p>
                         
                         <ul class="list-inline">
                             <li class="list-inline-item">
                                 <h6>Category:</h6>
                             </li>
                             <li class="list-inline-item">
-                                <p class="text-muted"><strong>Easy Wear</strong></p>
+                                <p class="text-muted"><strong>{{art_detail.catagory}}</strong></p>
                             </li>
                         </ul>
 
                         <h6>Description:</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temp incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse. Donec condimentum elementum convallis. Nunc sed orci a diam ultrices aliquet interdum quis nulla.</p>
+                        <p>{{art_detail.description}}</p>
                         <ul class="list-inline">
                             <li class="list-inline-item">
                                 <h6>artist's name :</h6>
                             </li>
                             <li class="list-inline-item">
-                                <p class="text-muted"><strong>Avvadh</strong></p>
+                                <p class="text-muted"><strong>{{art_detail.artist}}</strong></p>
                             </li>
                         </ul>
 
