--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                             <a class="nav-link" href="{% url 'about' %}">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"  href="{% url 'art' %}">Shop</a>
+                            <a class="nav-link"  href="{% url 'art_all' %}">Shop</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="">Contact</a>
