--- a/templates/art.html
+++ b/templates/art.html
@@ -47,7 +47,19 @@
         </div>
 
         <div class="col-lg-9">
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
 
+                    <span aria-hidden="true" onclick="this.parentElement.style.display='none';"
+                        style="font-weight: bold; font-size: 22px; cursor: pointer;float: right;">&times;</span>
+
+                </li>
+                {% endfor %}
+            </ul>
+            {% endif %}
             <div class="row">
                 {% for i in artworks %}
                 <div class="col-md-4">
@@ -57,7 +69,7 @@
                             <div class="card-img-overlay rounded-/media/{{ i.product_images }}0 product-overlay d-flex align-items-center justify-content-center">
                                 <ul class="list-unstyled">
                                     <li><a class="btn btn-success text-white mt-2" href="{% url 'artwork_detail' i.id %}"><i class="far fa-eye"></i></a></li>
-                                    <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i class="fas fa-cart-plus"></i></a></li>
+                                    <li><a class="btn btn-success text-white mt-2" href="{% url 'cart' i.id %}"><i class="fas fa-cart-plus"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -77,19 +89,7 @@
                 
         
             </div>
-            <div div="row">
-                <ul class="pagination pagination-lg justify-content-end">
-                    <li class="page-item disabled">
-                        <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0" href="#" tabindex="-1">1</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark" href="#">2</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link rounded-0 shadow-sm border-top-0 border-left-0 text-dark" href="#">3</a>
-                    </li>
-                </ul>
-            </div>
+            
         </div>
 
     </div>
