--- a/templates/base.html
+++ b/templates/base.html
@@ -14,15 +14,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static 'app/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
-    <style>
-        {
-            % block style %
-        }
-
-            {
-            % endblock %
-        }
-    </style>
 
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
@@ -73,7 +64,7 @@
                             <a class="nav-link" href="{% url 'about' %}">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"  href="{% url 'art_all' %}">Shop</a>
+                            <a class="nav-link" href="{% url 'art_all' %}">Shop</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="">Contact</a>
@@ -101,7 +92,7 @@
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'profile' %}">
                         <div id="user-btn" class="fas fa-user"></div>
                     </a>
-                    
+
 
                     {% if user.is_authenticated %}
 
@@ -256,8 +247,33 @@
     <script src="{% static 'app/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'app/js/templatemo.js' %}"></script>
     <script src="{% static 'app/js/custom.js' %}"></script>
-   
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script>
+            $('.remove-cart').click(function () {
+                var id = $(this).attr("pid");
+                var rowToRemove = $(this).closest("tr"); 
+        
+                $.ajax({
+                    type: 'GET',
+                    url: "/removecart",
+                    data: {
+                        prod_id: id
+                    },
+                    success: function (data) {
+                      
+                        $("#amount").text("Total Price : " + data.total);
+                        $("#totalamount").text("Rs." + data.totalamount);
+        
+                        
+                        rowToRemove.remove();
+                    }
+                });
+            });
+        </script>
+        
     <!-- End Script -->
 </body>
 
