--- a/templates/cart.html
+++ b/templates/cart.html
@@ -58,7 +58,7 @@
                     </table>
 
                     <div class="text-center mt-2">
-                        <button class="btn btn-warning">Check Out</button>
+                        <a href="{% url 'checkout' %}" class="btn btn-warning">Check Out</a>
                         <a href="{% url 'art_all' %}" class="btn btn-success">Explore more</a>
                     </div>
                 </div>
