Done order functionality with check order and received order

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
         </div>
                 
         <div class="col-md-4">
-            <a href="old_book.jsp">  
+            <a href="{% url 'order' %}">  
                 <div class="card">
                     <div class="card-body text-center">
                         <div class="text-warning"><i class="fas fa-shopping-bag fa-3x"></i></div>
@@ -50,11 +50,11 @@
         </div>
 
         <div class="col-md-6 mt-3">
-            <a href="helpline.jsp">  
+            <a href="{% url 'receiveorder' %}">  
                 <div class="card">
                     <div class="card-body text-center">
                         <div class="text-dark"><i class="fas fa-user fa-3x"></i></div>
-                        <h3 style="text-decoration: none; color: black;" class="mt-2">Add Profile Detail</h3>
+                        <h3 style="text-decoration: none; color: black;" class="mt-2">Recived Orders</h3>
                     </div>
                 </div>
             </a>
