--- a/templates/art_detail.html
+++ b/templates/art_detail.html
@@ -48,7 +48,7 @@
                                 <div class="row pb-3">
                                     
                                     <div class="col d-grid">
-                                        <button type="submit" class="btn btn-outline-dark btn-lg" name="submit" value="addtocard">Add To Cart</button>
+                                        <a href="{% url 'cart' art_detail.id %}" class="btn btn-outline-dark btn-lg" name="submit" value="addtocard">Add To Cart</a>
                                     </div>
                                 </div>
                             </div>
