--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'show_cart' %}">
                         <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
                         <span
-                            class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
+                            class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">{{ca}}</span>
                     </a>
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'profile' %}">
                         <div id="user-btn" class="fas fa-user"></div>
@@ -150,6 +150,8 @@
     {% block payment-gatway %}
     {% endblock  %}
 
+    {% block status  %}
+    {% endblock  %}
 
     <!-- Start Footer -->
     <footer class="bg-dark" id="footer">
