--- a/templates/base.html
+++ b/templates/base.html
@@ -67,9 +67,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'art_all' %}">Shop</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Contact</a>
-                        </li>
+                        
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex">
@@ -132,14 +130,15 @@
             <div class="w-100 pt-1 mb-5 text-right">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form action="" method="get" class="modal-content modal-body border-0 p-0">
+            <form method="get" class="modal-content modal-body border-0 p-0">
                 <div class="input-group mb-2">
-                    <input type="text" class="form-control" id="inputModalSearch" name="q" placeholder="Search ...">
+                    <input type="text" class="form-control" id="inputModalSearch" name="search" placeholder="Search ...">
                     <button type="submit" class="input-group-text bg-success text-light">
                         <i class="fa fa-fw fa-search text-white"></i>
                     </button>
                 </div>
             </form>
+            
         </div>
     </div>
 
@@ -193,11 +192,11 @@
                 <div class="col-md-4 pt-5">
                     <h2 class="h2 text-light border-bottom pb-3 border-light">Further Info</h2>
                     <ul class="list-unstyled text-light footer-link-list">
-                        <li><a class="text-decoration-none" href="#">Home</a></li>
-                        <li><a class="text-decoration-none" href="#">About Us</a></li>
-                        <li><a class="text-decoration-none" href="#">Shop </a></li>
+                        <li><a class="text-decoration-none" href="{% url 'home' %}">Home</a></li>
+                        <li><a class="text-decoration-none" href="{% url 'about' %}">About Us</a></li>
+                        <li><a class="text-decoration-none" href="{% url 'art_all' %}">Shop </a></li>
                         <li><a class="text-decoration-none" href="#">FAQs</a></li>
-                        <li><a class="text-decoration-none" href="#">Contact</a></li>
+                       
                     </ul>
                 </div>
 
