--- a/templates/login.html
+++ b/templates/login.html
@@ -42,6 +42,18 @@
                         <h3>Login</h3>
                     </div>
                     <div class="card-body">
+                        
+                    {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                        <li class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <span aria-hidden="true" onclick="this.parentElement.style.display='none';"
+                                style="font-weight: bold; font-size: 22px; cursor: pointer;float: right;">&times;</span>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
                         <form id="registrationForm" method="post" action="{% url 'login' %}">
                             {% csrf_token %}
                             <div class="form-group">
