--- a/templates/order.html
+++ b/templates/order.html
@@ -11,6 +11,17 @@
     <div class="row">
         <div class="col-sm-9 offset-sm-1">
            
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <span aria-hidden="true" onclick="this.parentElement.style.display='none';"
+                        style="font-weight: bold; font-size: 22px; cursor: pointer;float: right;">&times;</span>
+                </li>
+                {% endfor %}
+            </ul>
+            {% endif %}
             {% for i in order %}
             <div class="row">
                 <div class="col-sm-2">
